# ImageProcess

./: CMakeLists.txt  README.md
src/: Charset.cpp  Charset.h  ImageCompare.cpp  ImageCompare.h  ImageCompose.cpp  ImageCompose.h  ImageFind.cpp  ImageFind.h  ImageProcess.cpp  ImageProcess.h  Main.cpp  ParseParam.cpp  ParseParam.h  PdfProcess.cpp  PdfProcess.h  ScreenSnapshot.cpp  ScreenSnapshot.h  TextLabelOCR.cpp  TextLabelOCR.h  TextProcess.cpp  TextProcess.h  WindowsHND.cpp  WindowsHND.h  cmdline.h  common.cpp  common.h  debugCode.cpp  getopt.c  stdafx.cpp  stdafx.h  targetver.h
